# heteromarket

./: README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: main.yml
.github/workfolow/: tests.yml
src/heteromarket/: __init__.py  core.py
tests/: test_ad_function  test_ad_function.py  test_equilibrium_grad.py  test_gmres_solver.py  test_implicit_function.py  test_qp_solver.py  test_stock_solver.py  test_stock_solver_sum.py
