[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "heteromarket"
version = "0.1.0"
description = "heteromarket is a Python package for solving heterogeneous agent market models."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Vadim Vanak"}]
dependencies = []

# Optional Trove classifiers
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kotiik/heteromarket"
# Issues = "https://github.com/yourname/yourpkg/issues"

